# sdl

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum
.github/workflows/: ci.yml  release.yml
cmd/gad/: main.go
internal/downloaders/: aniworld.go  base.go  types.go
internal/extractors/: base.go  doodstream.go  filemoon.go  loadx.go  speedfiles.go  streamtape.go  utils.go  vidmoly.go  vidoza.go  voe.go
pkg/chrome/: chrome.go
pkg/cli/: cli.go
pkg/dirs/: dirs.go
pkg/download/: cache.go  download.go  manager.go  types.go  utils.go
pkg/ffmpeg/: ffmpeg.go
pkg/logger/: logger.go
pkg/utils/: utils.go  utils_test.go
src/: chrome.rs  cli.rs  download.rs  ffmpeg.rs  main.rs  mpv.rs
src/downloaders/: aniworldserienstream.rs  mod.rs
src/extractors/: filemoon.rs  loadx.rs  mod.rs  speedfiles.rs  streamtape.rs  vidmoly.rs  vidoza.rs  voe.rs
