[package]
name = "sdl"
version = "0.2.5"
edition = "2021"
rust-version = "1.75"
readme = "README.md"
repository = "https://github.com/bugmaschine/sdl"
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { version = "1.49", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["compat", "io"] }
futures-util = "0.3"
thirtyfour = "0.36.1"
selenium-manager = { git = "https://github.com/SeleniumHQ/selenium", tag = "selenium-4.14.0" }
async-speed-limit = "0.4"
hyper = "1.8"
serde_json = "1.0"
bytes = "1.11"
url = "2.5"
form_urlencoded = "1.2"
m3u8-rs = "6.0"
dirs = "6.0"
zip-extensions = "0.13"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
pathsearch = "0.2"
portpicker = "0.1"
interprocess = { version = "2.2", features = ["tokio"] }
regex = "1.12"
once_cell = "1.21"
enum_dispatch = "0.3"
enum-iterator = "2.3"
indicatif = "0.18.3"
number_prefix = "0.4"
byte-unit = { version = "5.1", features = [ "bit" ] }
rust-lapper = "1.2"
console = "0.16"
bitmask-enum = "2.2"
base64 = "0.22"
aes = "0.8"
cbc = "0.1"
log = "0.4.29"
chrono = "0.4"
anyhow = "1.0"

# upgrading this will break everything
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-native-roots", "stream", "gzip", "json"] }
reqwest-partial-retry = "0.1.1"
reqwest-retry = "0.3"
reqwest-middleware = "0.2"

env_logger = "0.10"
rand = "0.8"

[[bin]]
name = "sdl"
path = "src/main.rs"

[lib]
name = "sdl"
path = "src/lib.rs"

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1
